<resources>
    <string name="app_name">SmartHomeDemo</string>
    <string name="type">家具图片</string>
    <string name="furniture">设备名称</string>
    <string name="working">工作状态</string>
    <string name="status1">其他状态1</string>
    <string name="status2">其他状态2</string>
    <string name="INFO">INFO</string>
    <string name="WARN">WARN</string>
    <string name="ALERT">ALERT</string>
    <string name="log_time">日志时间</string>
    <string name="log_des">日志信息</string>
    <string name="name_car">汽车名</string>
    <string name="enginOn">发动机状态：已启动</string>
    <string name="enginOff">发动机状态：已熄火</string>
    <string name="fuel">剩余油量</string>
    <string name="mile">剩余里程</string>
    <string name="logID">日志ID</string>
    <string name="match_device">发现新设备</string>
    <string name="new_device">是否进行配对？</string>
    <string name="device_id">设备ID</string>
    <string name="device_type">设备类型</string>
    <string name="match_cancel">取消</string>
    <string name="match_done">确定配对</string>
    <string name="car_light_on">开启车灯</string>
    <string name="car_engine_on">启动汽车</string>
    <string name="car_ac_on">开启空调</string>
    <string name="car_light_off">关闭车灯</string>
    <string name="car_engine_off">汽车熄火</string>
    <string name="car_ac_pff">关闭空调</string>
    <string name="car_lock">车门上锁</string>
    <string name="car_unlock">车门解锁</string>
    <string name="unbind_confirm_label">解绑确认</string>
    <string name="unbind_confirm_content">是否解绑该设备？</string>
    <string name="unbind_done">确定解绑</string>
    <string name="param_label">参数</string>
    <string name="back">返回</string>
    <string name="furniture_specific">家具详情</string>
    <string name="furniture_image">家具图片</string>
    <string name="unbind_device">解绑设备</string>
    <string name="location">当前位置</string>
    <string name="lock">车门状态：已锁定</string>
    <string name="unlock">车门状态：已解锁</string>
    <string name="acON">空调状态：已开启</string>
    <string name="acOFF">空调状态：已关闭</string>
    <string name="alert_message">报警信息：</string>
    <string name="alert_label">设备报警！</string>
    <string name="confirm">确定</string>
    <string name="scene_mode_name">默认情景模式</string>
    <string name="scene_mode_select">为本情景选择家具</string>
    <string name="customize_done">确认</string>
    <string name="log_message">日志信息</string>
    <string name="select_report">选择要生成的智能报告</string>
    <string name="gen_vehicle_report">汽车健康报告</string>
    <string name="gen_energy_report">家庭能耗报告</string>
</resources>