<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="26dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_device"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_device"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <TextView
        android:id="@+id/match_device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_id"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <TextView
        android:id="@+id/match_device_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_type"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="选择分组:"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinner_device_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:scrollbarSize="20dp"
        android:spinnerMode="dropdown" />

    <CheckBox
        android:id="@+id/checkBox_add_to_blacklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="取消时添加到黑名单"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_new_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/match_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="start"
            android:gravity="center"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_new_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/match_done"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="end"
            android:gravity="center"
            android:textSize="18sp"/>

    </LinearLayout>
</LinearLayout>
