<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="26dp">
    <TextView
        android:id="@+id/scene_mode_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scene_mode_name"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="8dp"
        android:text="@string/scene_mode_select"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:padding="5dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/customize_device_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="400dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/customize_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/match_cancel"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/customize_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/customize_done"
            android:textSize="18sp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>