<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="26dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/ALERT_background"
            android:src="@android:drawable/ic_dialog_alert"
            app:tint="@android:color/holo_red_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_label"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_message"
            android:textSize="20sp"
            android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <TextView
        android:id="@+id/alert_device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_id"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <TextView
        android:id="@+id/alert_device_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_type"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alert_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="start"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_alert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="查看设备"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="end"
            android:textSize="18sp"/>

    </LinearLayout>
</LinearLayout>
