<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingRight="10dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp"
        android:background="@drawable/rounded_border">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/log_type"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/INFO"
                android:textColor="@color/INFO_text"
                android:textSize="14sp"
                app:backgroundTint="@color/INFO_background"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/log_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_time"
                android:textSize="16sp"
                android:paddingStart="10dp"/>

            <View
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/log_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logID"
                android:textSize="16sp"
                android:paddingEnd="15sp"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/log_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_des"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>