<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:orientation="vertical">

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintTop_toTopOf="parent"/>
        <!-- 汽车图像 -->

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_car"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_no_signal"
            android:contentDescription="汽车摄像头照片"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/top_view"
            tools:layout_editor_absoluteX="9dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/iv_car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/layout_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">
                <!-- 参数区域 -->
                <TextView
                    android:id="@+id/car_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/name_car"
                    android:textStyle="bold"
                    android:textSize="24sp" />
                <!-- 参数项1 -->
                <TextView
                    android:id="@+id/car_engine_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/enginOn"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/car_lock_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lock"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/car_ac_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/acON"
                    android:textSize="18sp" />

                <!-- 参数项2 -->
                <TextView
                    android:id="@+id/car_fuel_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/fuel"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/car_mile_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/location"
                    android:textSize="18sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
                <TextView
                    android:id="@+id/control_car_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="控制"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="22sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/control_car_lock"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/icon_lock"
                        app:backgroundTint="@android:color/transparent"
                        app:cornerRadius="0dp"
                        android:layout_weight="1"
                        app:iconSize="80dp"
                        app:iconTint="@color/orange"
                        app:iconGravity="textTop"
                        android:text="@string/car_unlock"
                        android:textColor="#FF9E9E9E"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/control_car_engine"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/icon_car_engine"
                        app:backgroundTint="@android:color/transparent"
                        app:cornerRadius="0dp"
                        android:layout_weight="1"
                        app:iconSize="80dp"
                        app:iconTint="#FF9E9E9E"
                        app:iconGravity="textTop"
                        android:text="@string/car_engine_on"
                        android:textColor="#FF9E9E9E"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/control_car_ac"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/icon_car_ac"
                        app:backgroundTint="@android:color/transparent"
                        app:cornerRadius="0dp"
                        android:layout_weight="1"
                        app:iconTint="#FF9E9E9E"
                        app:iconSize="80dp"
                        app:iconGravity="textTop"
                        android:text="@string/car_ac_on"
                        android:textColor="#FF9E9E9E"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
