<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="26dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_report"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <ImageView
                android:id="@+id/img_vehicle_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/gen_vehicle_report"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gen_vehicle_report"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <ImageView
                android:id="@+id/img_energy_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/gen_energy_report"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gen_energy_report"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>