<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="26dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/detail_log_type"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/INFO"
            android:textColor="@color/INFO_text"
            android:textSize="15sp"
            app:backgroundTint="@color/INFO_background"
            app:cornerRadius="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="日志信息详情"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingLeft="40dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/detail_log_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_message"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <TextView
        android:id="@+id/detail_log_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="来源设备"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <TextView
        android:id="@+id/detail_log_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="日志时间"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <TextView
        android:id="@+id/detail_log_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="日志ID"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <ImageView
        android:id="@+id/detail_log_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="传入异常图片"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detail_log_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="start"
            android:gravity="center"
            android:textSize="18sp"/>

    </LinearLayout>
</LinearLayout>
